--- a/starwars/src/components/StarWars.css
+++ b/starwars/src/components/StarWars.css
@@ -9,6 +9,8 @@ body {
   margin: 0;
 }
 #root {
+  display: flex;
+  justify-content: center;
   width: 100vw;
   height: 100vh;
   color: #2a2223;
@@ -20,7 +22,7 @@ h1 {
   text-align: center;
   margin: 0;
 }
-.logo_container {
+/* .logo_container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,7 +31,7 @@ h1 {
 }
 .logo {
   width: 250px;
-}
+} */
 h2 {
   color: #474747;
   font-size: 25px;
@@ -37,21 +39,21 @@ h2 {
   margin: 0;
   padding: 10px;
 }
-.film {
+.character {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
   margin: 20px auto;
   max-width: 900px;
 }
-.film-list {
+.character-list {
   background: #bcc8c1;
   height: auto;
   border-radius: 4px;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 p {
-  padding: 10px;
+  padding: 2px;
 }
 p:nth-child(2) {
   padding: 10px;
