--- a/starwars/src/components/StarWars.css
+++ b/starwars/src/components/StarWars.css
@@ -22,16 +22,6 @@ h1 {
   text-align: center;
   margin: 0;
 }
-/* .logo_container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: rgba(225, 225, 225, 0.5);
-}
-.logo {
-  width: 250px;
-} */
 h2 {
   color: #474747;
   font-size: 25px;
@@ -42,7 +32,7 @@ h2 {
 .character {
   display: grid;
   grid-gap: 20px;
-  grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   margin: 20px auto;
   max-width: 900px;
 }
@@ -53,10 +43,10 @@ h2 {
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 p {
-  padding: 2px;
+  padding: 1px;
 }
 p:nth-child(2) {
-  padding: 10px;
+  padding: 2px;
   font-size: 18px;
   display: block;
   text-overflow: ellipsis;
@@ -66,7 +56,7 @@ p:nth-child(2) {
   line-height: 1.2em;
 }
 @media (max-width: 580px) {
-  .film-list {
+  .character-list {
     align-self: center;
     justify-self: center;
     font-size: 0.9rem;
